--- a/web/public/index.html
+++ b/web/public/index.html
@@ -17,7 +17,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Learn how to use the Firebase platform on the Web">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UnFriendly Chat</title>
+  <title>Peer Learning Tutor</title>
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
@@ -59,7 +59,7 @@
   <header class="mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
     <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
       <div class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
-        <h3><i class="material-icons">chat_bubble_outline</i> Friendly Chat</h3>
+        <h3><i class="material-icons">chat_bubble_outline</i> Peer Learning Tutor</h3>
       </div>
       <div id="user-container">
         <div hidden id="user-pic"></div>
@@ -87,8 +87,15 @@
               <input class="mdl-textfield__input" type="text" id="message" autocomplete="off">
               <label class="mdl-textfield__label" for="message">Message...</label>
             </div>
+
+            <!-- Submit button -->
             <button id="submit" disabled type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
               Send
+            </button>
+
+            <!-- Hint Button -->
+            <button id="hint" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+              Hint
             </button>
           </form>
           <form id="image-form" action="#">
