Update hint button and increase chat limit to 25

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -94,7 +94,7 @@
             </button>
 
             <!-- Hint Button -->
-            <button id="hint" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+            <button id="hint" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" onclick="getHint()">
               Hint
             </button>
           </form>
